# game-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  journal_de_developpement.md  mathematiques-et-physique-pour-le-jeu-video-projet-de-session  physics-engine.vcxproj  physics-engine.vcxproj.filters  shaders.vcxproj  shaders.vcxproj.filters
include/: app.hpp  game_engine.hpp  object.hpp  particule.hpp  time.hpp  vector3D.hpp  vulkan_renderer.hpp
include/math/: matrix3.hpp  matrix33.hpp  matrix4.hpp  quaternion.hpp  vector3.hpp  vector3D.hpp
include/physics_engine/: naive_particle_contact_generator.hpp  particle.hpp  particle_anchored_spring.hpp  particle_buoyancy.hpp  particle_cable.hpp  particle_contact.hpp  particle_contact_generator.hpp  particle_contact_resolver.hpp  particle_drag.hpp  particle_force_generator.hpp  particle_force_registry.hpp  particle_gravity.hpp  particle_link.hpp  particle_rod.hpp  particle_spring.hpp  particule.hpp  particule_anchored_spring.hpp  physic_world.hpp  primitives.hpp  rigid_body.hpp
include/physics_engine/collisions/: bounding_sphere.hpp  collision_detector.hpp  node.hpp
include/physics_engine/contacts/particles/: naive_particle_contact_generator.hpp  particle_contact.hpp  particle_contact_generator.hpp  particle_contact_resolver.hpp
include/physics_engine/contacts/rigid_bodies/: contact.hpp  contact_resolver.hpp
include/physics_engine/forces/particles/: particle_anchored_spring.hpp  particle_buoyancy.hpp  particle_drag.hpp  particle_force_generator.hpp  particle_force_registry.hpp  particle_gravity.hpp  particle_spring.hpp
include/physics_engine/forces/rigid_bodies/: force_generator.hpp  force_registry.hpp
include/physics_engine/primitives/: box.hpp  plane.hpp  primitive.hpp  sphere.hpp
include/test_scenes/: test_cable.hpp
include/vulkan_renderer/: camera.hpp  mesh.hpp  renderer_utils.hpp  ui.hpp  vulkan_renderer.hpp
include/vulkan_renderer/mesh/: cube.hpp  mesh.hpp  sphere.hpp
libs/: CMakeLists.txt
src/: app.cpp  game_engine.cpp  main.cpp  object.cpp  particule.cpp  time.cpp  vector3D.cpp  vulkan_renderer.cpp
src/math/: matrix3.cpp  matrix33.cpp  matrix4.cpp  quaternion.cpp  vector3.cpp  vector3D.cpp
src/physics_engine/: naive_particle_contact_generator.cpp  particle.cpp  particle_anchored_spring.cpp  particle_buoyancy.cpp  particle_cable.cpp  particle_contact.cpp  particle_contact_link.cpp  particle_contact_resolver.cpp  particle_drag.cpp  particle_force_generator.cpp  particle_force_registry.cpp  particle_gravity.cpp  particle_link.cpp  particle_rod.cpp  particle_spring.cpp  particule.cpp  physic_world.cpp  primitives.cpp  rigid_body.cpp
src/physics_engine/collisions/: bounding_sphere.cpp  collision_detector.cpp  node.cpp
src/physics_engine/collsions/: node.cpp
src/physics_engine/contacts/particles/: naive_particle_contact_generator.cpp  particle_cable.cpp  particle_contact.cpp  particle_contact_resolver.cpp  particle_link.cpp  particle_rod.cpp
src/physics_engine/contacts/rigid_bodies/: contact.cpp  contact_resolver.cpp
src/physics_engine/forces/particles/: particle_anchored_spring.cpp  particle_buoyancy.cpp  particle_drag.cpp  particle_force_generator.cpp  particle_force_registry.cpp  particle_gravity.cpp  particle_spring.cpp
src/physics_engine/forces/rigid_bodies/: force_generator.cpp  force_registry.cpp
src/physics_engine/primitives/: box.cpp  plane.cpp  primitive.cpp  sphere.cpp
src/shaders/: shader.frag  shader.vert
src/test_scenes/: test_cable.cpp
src/vulkan_renderer/: camera.cpp  mesh.cpp  renderer_utils.cpp  ui.cpp  vulkan_renderer_cleanup.cpp  vulkan_renderer_debug.cpp  vulkan_renderer_init.cpp  vulkan_renderer_update.cpp
src/vulkan_renderer/mesh/: cube.cpp  mesh.cpp  sphere.cpp
